Add visible version number v1.1

--- a/index.html
+++ b/index.html
@@ -190,6 +190,17 @@
             margin-top: 6px;
         }
 
+        #version-tag {
+            position: fixed;
+            bottom: 4px;
+            right: 6px;
+            font-size: 10px;
+            opacity: 0.5;
+            color: #fff;
+            pointer-events: none;
+            z-index: 9999;
+        }
+
         #process-canvas,
         #capture-canvas {
             display: none;
