--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
         </div>
 
         <button id="submit-btn" disabled>Hepsini gönder</button>
+        <div id="version-tag">v1.1</div>
     </div>
 
     <!-- İşleme için canvas'lar -->
