--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         </div>
 
         <button id="submit-btn" disabled>Hepsini gönder</button>
-        <div id="version-tag">v1.1</div>
+        <div id="version-tag">v1.2 (Hızlı Çekim)</div>
     </div>
 
     <!-- İşleme için canvas'lar -->
